err/aei.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/AEI-1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyrimaa'...
Compiling './lib/python3.5/site-packages/pyrimaa/aei.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/aei.py", line 185
    except socket.error, exc:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrimaa/analyze.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/analyze.py", line 97
    print "Could not open '%s'" % (args.config, )
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrimaa/board.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/board.py", line 51
    ALL_BITS = 0xFFFFFFFFFFFFFFFFL
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrimaa/gameroom.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/gameroom.py", line 96
    except urllib2.URLError, err:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyrimaa/postal_controller.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/postal_controller.py", line 47
    print "Unrecognized command line arguments", args[1:]
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyrimaa/roundrobin.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/roundrobin.py", line 104
    print "Could not open '%s'" % (args.config, )
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyrimaa/tests'...
Compiling './lib/python3.5/site-packages/pyrimaa/x88board.py'...
***   File "./lib/python3.5/site-packages/pyrimaa/x88board.py", line 89
    cnt = (bit & 0xAAAAAAAAAAAAAAAAL) != 0L
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
